--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
+    <script src="jquery.js"></script>
+    <script src="jquery.kerning.min.js"></script>
+    <script>
+      jQuery(function($) {
+        $.getJSON("kerning-data.json" , function(_data) {
+        $('h3').kerning({"data":_data});
+       });
+      });
+    </script>
   </head>
   <body>
     <section class="page-header">
